# openclaw-godot

./: .gitignore  LICENSE  README.md  pyproject.toml
.beads/: metadata.json
.plans/: README.md
.plans/openclaw-godot/: PLAN.md  README.md
.plans/openclaw-godot/workers/: coder.md  debugger.md  tester.md  visual_verifier.md
docs/: ARCHITECTURE.md  orchestrator-enhancements.md  orchestrator-patch.sh
examples/button_background/: README.md  test_autonomous.py  test_phase0.py  test_phase1.py  test_phase1_autotest.py
examples/console_log_test/: README.md  test_console_log.py
examples/debugger_test/: README.md  test_debugger.py
godot/button_background/: README.md  main.gd  main.tscn  main_auto_test.gd  main_auto_test.tscn  project.godot
godot/console_log_test/: main.gd  main.tscn  project.godot
godot/debugger_test/: main.gd  main.tscn  project.godot
src/godot_bridge/: __init__.py  capture.py  godot.py  input.py
src/plugin/openclaw_bridge/: openclaw_bridge.gd  plugin.cfg
workers/: coder.md  debugger.md  godot-coder.md  godot-debugger.md  godot-tester.md  godot-visual-verifier.md  tester.md  visual_verifier.md
